cs3310/Assignment 2/submission/test/pass/Test_2e.java
class Test2e{
    public static void main(String[] a){
        System.out.println(1);
    }
}


class Finder {
    public int Find(int a,int num){
        int i;
	int[] arr;
	arr[0] = i; 
	return 0;
    }
}

